# extension-module-template

./: .env  .env.example  Cargo.toml  README.md  TEMPLATE.md
contracts/: Cargo.toml  README.md
contracts/src/: contract.rs  error.rs  lib.rs  msg.rs
contracts/src/handlers/: execute.rs  mod.rs  query.rs  reply.rs
interfaces/: Cargo.toml  README.md
interfaces/src/: lib.rs  template.rs
scripts/: Cargo.toml  README.md
scripts/src/: main.rs
