
[workspace]
members = [
  "contracts",
  "scripts",
  "interfaces"
]

[workspace.package]
version = "0.0.1"
authors = ["{{ authors }}"]
# TODO: documentationdescription = "Interfaces for the various components of the system"description = "Interfaces for the various components of the system"
description = "A short description of my package"


[workspace.dependencies]
cosmwasm-std = { version = "1.1" }
abstract-os = "0.2.0-beta.5"
cw-asset = {version = "2.2.0"}
