[package]
name = "interfaces"
version = "1.1.1"
edition = "2021"
#workspace.version = true
#workspace.authors = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abstract-os = { workspace = true }
cw-asset = { workspace = true }
cosmwasm-std = { workspace = true }
boot-core = { path = "../../../Abstract/BOOT/boot-core" }
boot-cw-plus = "0.1.3"
abstract-boot = { path = "../../contracts/packages/abstract-boot" }
#abstract-boot = "0.2.0-beta.5"
serde_json = "1.0.79"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
template-app = { package = "template-app-name", path = "../contracts" }
