[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interfaces = { path = "../interfaces" }
boot-core = { path = "../../../Abstract/BOOT/boot-core" }
boot-cw-plus = "0.1.3"
abstract-boot = { path = "../../contracts/packages/abstract-boot" }
log = "0.4.14"
cosmwasm-std = { version = "1.1" }
anyhow = "1.0"
serde_json = "1.0.79"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
semver = { version = "1.0.13", default-features = false }
abstract-os = {  workspace = true }
template-app = { package = "template-app-name", path = "../contracts" }
